RESOLVED FIXED159162
AX: REGRESSION (r202063): ARIA role attribute is being ignored for label element
https://bugs.webkit.org/show_bug.cgi?id=159162
Summary AX: REGRESSION (r202063): ARIA role attribute is being ignored for label element
Joanmarie Diggs
Reported 2016-06-27 12:55:49 PDT
SSIA
Attachments
Patch (5.18 KB, patch)
2016-06-27 13:13 PDT, Joanmarie Diggs
no flags
Radar WebKit Bug Importer
Comment 1 2016-06-27 12:56:19 PDT
Joanmarie Diggs
Comment 2 2016-06-27 13:13:29 PDT
WebKit Commit Bot
Comment 3 2016-06-27 15:13:36 PDT
Comment on attachment 282159 [details] Patch Clearing flags on attachment: 282159 Committed r202516: <http://trac.webkit.org/changeset/202516>
WebKit Commit Bot
Comment 4 2016-06-27 15:13:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.