AX: REGRESSION (r202063): ARIA role attribute is being ignored for label element https://bugs.webkit.org/show_bug.cgi?id=159162

Reviewed by Chris Fleizach.

Source/WebCore:

createFromRenderer() was creating an AccessibilityLabel for any HTMLLabelElement which
lacked an explicitly-handled ARIA role. We should instead create an AccessibilityLabel
when there is no ARIA role.

Test: accessibility/aria-role-on-label.html

* accessibility/AXObjectCache.cpp:
(WebCore::createFromRenderer):

LayoutTests:

This regression was caught by a GTK-specific layout test. Adding a cross-platform
test for additional coverage.

* accessibility/aria-role-on-label.html: Added.
* platform/gtk/accessibility/aria-role-on-label-expected.txt: Added.
* platform/mac/accessibility/aria-role-on-label-expected.txt: Added.


Canonical link: https://commits.webkit.org/177267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202516 268f45cc-cd09-0410-ab3c-d52691b4dbfc